--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,7 +13,6 @@ header {
 
 h1 {
     margin: 0;
-    padding-top: 120px;
 }
 
 h3 {
@@ -29,12 +28,16 @@ h3 {
 
 .black-dash {
     background-color: #000000;
-    width: 103%;
-    height: 1px;
+    width: 100%;
+    height: 2px;
 }
 
 #about .black-dash {
-    margin-top: 135px;
+    margin-top: 15px;
+}
+
+#about {
+    padding-top: 120px;
 }
 
 #about p {
@@ -90,17 +93,21 @@ span {
     color: #999999;
 }
 
-#popular-products-row {
-    margin-top: 100px;
-    margin-bottom: 100px;
+.popular-products {
+    padding-top: 120px;
 }
 
-#popular-products-row .black-dash {
+.popular-products .black-dash {
     margin-top: 34px;
 }
 
-#popular-products-row p {
+.popular-products p {
     padding-top: 26px;
+}
+
+.popular-products a {
+    color: #990000;
+    font-weight: 400;
 }
 
 .grey-background .row {
@@ -109,7 +116,7 @@ span {
 }
 
 .grey-background .black-dash {
-    margin-top: 26px;
+    margin-top: 32px;
 }
 
 nav ul {
@@ -119,6 +126,10 @@ nav ul {
     padding: 0;
     margin: 0;
     color: white;
+}
+
+li {
+    list-style-type: none;
 }
 
 nav ul li {
@@ -153,16 +164,16 @@ nav {
     height: 20px;
 }
 
-ul {
-    list-style-type: none;
-}
-
 footer {
-    height: 329px;
     background-color: #2d2d2d;
-    padding-top: 113px;
+    padding-top: 110px;
     color: #999999;
     position: relative;
+    height: 329px;
+}
+
+footer ul {
+    padding-left: 0;
 }
 
 footer li a {
@@ -193,18 +204,32 @@ footer li a {
     right: 80px;
 }
 
-#social {
+i.ion-bag {
+    font-size: 1.7em;
+}
+
+i.ion-ios-search-strong {
+    font-size: 1.7em;
+}
+
+.social {
     position: absolute;
     bottom: 160px;
     right: 80px;
 }
 
+.col-xs-12 .social {
+    position: static;
+}
+
+/*Need to change this*/
 @media screen and (max-width: 1495px) {
     .logo {
         display: none;
     }
 }
 
+/*Need to change this*/
 @media screen and (max-width: 1159px) {
     #login {
         display: none;
@@ -221,14 +246,14 @@ footer li a {
     background-color: #999999;
 }
 
-#social > ul {
+.social > ul {
     margin: 0;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-#social li {
+.social li {
     margin-right: 10px;
 }
 
@@ -316,6 +341,14 @@ footer li a {
     display: inline;
 }
 
+.img-text-group.sale-tag-active .sale-tag{
+    display: block;
+}
+
+.img-text-group.new-tag-active .new-tag{
+    display: block;
+}
+
 .round-btn-filter i {
     display: none;
     color: white;
@@ -342,6 +375,10 @@ footer li a {
     flex-direction: row;
 }
 
+.col-xs-12 .flex-horizontal {
+    justify-content: space-around;
+}
+
 .flex-vertical {
     display: flex;
     flex-direction: column;
@@ -354,12 +391,65 @@ footer li a {
     margin-top: 20px;
 }
 
-@media only screen and (min-width: 320px) {
-    nav, section, footer {
-        padding: 0 29px;
+.text-center-aligment {
+    text-align: center;
+}
+
+.popular-product {
+    padding-top: 10px;
+}
+
+.upper-browse-all-products {
+    margin-top: 20px;
+}
+
+.product-images {
+    margin-top: 100px;
+}
+
+@media (max-width: 780px) {
+    nav, footer, section {
+        padding-left: 29px;
+        padding-right: 29px;
     }
     
     header {
         background-position: top;
     }
+    
+    footer .col-xs-12 {
+        margin-bottom: 130px;
+        text-align: center;
+    }
+    
+    footer {
+        height: 1179px;
+    }
+}
+.sale-tag {
+    width: 54px;
+    height: 27px;
+    border-radius: 4px;
+    background-color: #CA3415;
+    position: absolute;
+    top: 17px;
+    right: 30px;
+    color: white;
+    text-align: center;
+    padding-top: 3px;
+    display: none;
+}
+
+.new-tag {
+    width: 54px;
+    height: 27px;
+    border-radius: 4px;
+    background-color: #94BC39;
+    position: absolute;
+    top: 17px;
+    right: 30px;
+    color: white;
+    text-align: center;
+    padding-top: 3px;
+    display: none;
 }
